<resources>
    <string name="app_name">Flappy Ball</string>
    <string name="you_die">YOU DIED !!!</string>
    <string name="restart">Restart</string>
    <string name="your_score">Your Score:</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="best_score">Best Score:</string>
    <string name="game_over">GAME OVER!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
    <string name="best_score_preview">Best score</string>
    <string name="play">Play</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="new_game">New Game</string>
    <string name="continue_txt">Continue</string>
    <string name="home">Home</string>
</resources>