<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.pause_screen.PauseFragment">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/gray" />

    <View
        android:id="@+id/center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/continue_ic"
        android:elevation="5dp"
        android:fontFamily="@font/nunito_bold"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/center" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/refresh_ic"
        android:elevation="5dp"
        android:fontFamily="@font/nunito_bold"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/center"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/home_ic"
        android:elevation="5dp"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btn_continue"
        app:layout_constraintStart_toEndOf="@+id/btn_reset"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/new_game"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_reset"
        app:layout_constraintStart_toStartOf="@+id/btn_reset"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/continue_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_continue"
        app:layout_constraintStart_toStartOf="@+id/btn_continue"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_home"
        app:layout_constraintStart_toStartOf="@+id/btn_home"
        app:layout_constraintTop_toBottomOf="@+id/btn_home" />

</androidx.constraintlayout.widget.ConstraintLayout>